# EOM_LLM

./: README.md  Temp file.py  hierarchy_stakeholders.json  langgraph.json  normalize_stakeholder.py  pyproject.toml  requirements.txt  stakeholder_extractor.py  stakeholders_output_AP HK - Financial industry.json  stakeholders_output_AP HK - Government.json  transformed_stakeholders.json  usage_example.py
Archive/: consolidate_stakeholdersOLD.py  normalize_stakeholder_names.py
TEMP/: stakeholders_output_AP - TW - Technology.json  stakeholders_output_AP - TW - Technology_llm_only_consolidated.json  stakeholders_output_AP HK - Financial industry.json  stakeholders_output_AP HK - Financial industry_consolidated.json
enrichment/: __init__.py  configuration.py  graph.py  graphOLD.py  prompts.py  state.py  utils.py
output/: 5.2 v5_2026_03_11.json  5.2 v5_2026_03_11_clusters.json  5.2_v5_2026_03_11_ecosystem.xlsx  AP HK - Financial industry_stakeholders.json  AP HK - Financial industry_stakeholders_consolidated.json  AP HK - Financial industry_stakeholders_relationships.json  AP HK - Financial industry_stakeholders_relationships_0.json  AP HK - Financial industry_stakeholders_relationships_1.json  AP HK - Financial industry_stakeholders_relationships_dynamic_hierarchy.json  AP HK - Financial industry_stakeholders_relationships_hierarchy.json  AP HK - General Press and media_stakeholders.json  cluster_summary.csv  results_output  stakeholders_output_AP HK - Financial industry.json  stakeholders_output_AP HK - Financial industry_consolidated.json  stakeholders_output_AP HK - Financial industry_consolidated_relationships.json  stakeholders_output_AP HK - Financial industry_llm_only_consolidated.json  stakeholders_output_AP HK - General Press and media.json  stakeholders_output_AP HK - Government.json  stakeholders_output_AP HK - Government_consolidated.json  stakeholders_output_AP HK - Government_consolidated_relationships.json  stakeholders_output_AP HK - NGO.json  stakeholders_output_AP HK - NGO_consolidated.json  stakeholders_output_AP HK - NGO_consolidated_relationships.json  stakeholders_output_Chinese doc.json  stakeholders_output_Consulting reports - China.json  stakeholders_output_Healthy Diets - UPFs.json  stakeholders_output_Packaging sustainability Expert.json  test_policy_output.json  test_policy_output_consolidated.json  test_policy_output_relationship.json  test_policy_output_relationship_dynamic_hierarchy.json  test_policy_output_relationship_hierarchy.json  test_policy_output_transformed.json  test_policy_output_transformed_hierarchy.json
output/REMOVE/: AP HK - Financial industry_stakeholders.json  AP HK - Financial industry_stakeholders_consolidated.json  AP HK - Financial industry_stakeholders_relationships_hierarchy.json  test_policy_output_consolidated.json  test_policy_output_relationship.json  test_policy_output_transformed_hierarchy.json
stakeholder_pipeline/: 01_stakeholder_extractor.py  02_consolidate_stakeholders.py  02_consolidate_stakeholders_using_llm.py  02_consolidate_stakeholders_using_textembedding.py  03_relationship_extractor.py  04_cluster_stakeholders.py  04_hierarchy_pipeline.py  04_hierarchy_pipeline_dynamic.py  04_hierarchy_pipeline_macromicro.py  04_relationship_graph.py  Temp.py  normalize_stakeholder.py  test_policy_text.txt  transform_stakeholders.py
stakeholder_pipeline/REMOVE/: 04_ecosystem_mapping.py  04_hierarchy_pipeline0.py  test_policy_text2.txt
stakeholder_pipeline/stakeholder_pipeline/output/: stakeholders_output_AP HK - Financial industry.json  stakeholders_output_AP HK - Financial industry_consolidated.json  stakeholders_output_AP HK - Financial industry_consolidated_relationships.json
stakeholder_pipeline/utils/: __init__.py  extraction_utils.py
supabase/: select_data.py
supabase_utils/: select_data.py  supabase_db.py
